test_files/positive/stream/indirect-filter.stats
Version : 1.7
Incremental updates : 0
Neither updates nor object streams nor free objects nor encryption
Object count : 7
Filter : ASCII85Decode -> 1 times
Objects of known type : 6
Known type rate : 0.857143
Graph has no known error
Content streams have no known error
